output/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> block
Rule 1     block -> statement
Rule 2     block -> block NL
Rule 3     block -> block NL statement
Rule 4     statement -> WHILE expression COLON IND block DED
Rule 5     statement -> CONTINUE
Rule 6     statement -> PASS
Rule 7     statement -> expression
Rule 8     conditional -> IF expression COLON IND block DED
Rule 9     conditional -> conditional ELIF expression COLON IND block DED
Rule 10    conditional -> conditional NL
Rule 11    statement -> conditional
Rule 12    statement -> conditional ELSE COLON IND block DED
Rule 13    expression -> expression LPAREN parameters RPAREN
Rule 14    expression -> expression LPAREN RPAREN
Rule 15    parameters -> expression
Rule 16    parameters -> parameters COMMA expression
Rule 17    expression -> FUN LPAREN declaration RPAREN COLON IND block DED
Rule 18    expression -> FUN LPAREN ID RPAREN COLON IND block DED
Rule 19    expression -> FUN LPAREN RPAREN COLON IND block DED
Rule 20    declaration -> ID COMMA ID
Rule 21    declaration -> declaration COMMA ID
Rule 22    statement -> RETURN expression
Rule 23    expression -> ID ASSIGN expression
Rule 24    expression -> ID PLUSASSIGN expression
Rule 25    expression -> ID PLUSONE
Rule 26    expression -> ID MINUSASSIGN expression
Rule 27    expression -> ID MINUSONE
Rule 28    expression -> DEL ID
Rule 29    expression -> ID
Rule 30    expression -> MIN expression
Rule 31    expression -> NOT expression
Rule 32    expression -> expression PLUS expression
Rule 33    expression -> expression MIN expression
Rule 34    expression -> expression TIMES expression
Rule 35    expression -> expression DIV expression
Rule 36    expression -> expression MOD expression
Rule 37    expression -> expression POW expression
Rule 38    expression -> expression AND expression
Rule 39    expression -> expression OR expression
Rule 40    expression -> expression IF expression
Rule 41    expression -> expression IN expression
Rule 42    expression -> expression EQ expression
Rule 43    expression -> expression NEQ expression
Rule 44    expression -> expression LT expression
Rule 45    expression -> expression LTE expression
Rule 46    expression -> expression GT expression
Rule 47    expression -> expression GTE expression
Rule 48    expression -> expression IF expression ELSE expression
Rule 49    expression -> NUMBER
Rule 50    expression -> BOOLEAN
Rule 51    expression -> STRING
Rule 52    expression -> NONE
Rule 53    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

AND                  : 38
ASSIGN               : 23
BOOLEAN              : 50
COLON                : 4 8 9 12 17 18 19
COMMA                : 16 20 21
CONTINUE             : 5
DED                  : 4 8 9 12 17 18 19
DEL                  : 28
DIV                  : 35
ELIF                 : 9
ELSE                 : 12 48
EQ                   : 42
FUN                  : 17 18 19
GT                   : 46
GTE                  : 47
ID                   : 18 20 20 21 23 24 25 26 27 28 29
IF                   : 8 40 48
IN                   : 41
IND                  : 4 8 9 12 17 18 19
LPAREN               : 13 14 17 18 19 53
LT                   : 44
LTE                  : 45
MIN                  : 30 33
MINUSASSIGN          : 26
MINUSONE             : 27
MOD                  : 36
NEQ                  : 43
NL                   : 2 3 10
NONE                 : 52
NOT                  : 31
NUMBER               : 49
OR                   : 39
PASS                 : 6
PLUS                 : 32
PLUSASSIGN           : 24
PLUSONE              : 25
POW                  : 37
RETURN               : 22
RPAREN               : 13 14 17 18 19 53
STRING               : 51
TIMES                : 34
WHILE                : 4
error                : 

Nonterminals, with rules where they appear

block                : 2 3 4 8 9 12 17 18 19 0
conditional          : 9 10 11 12
declaration          : 17 21
expression           : 4 7 8 9 13 14 15 16 22 23 24 26 30 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 48 53
parameters           : 13 16
statement            : 1 3

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . statement
    (2) block -> . block NL
    (3) block -> . block NL statement
    (4) statement -> . WHILE expression COLON IND block DED
    (5) statement -> . CONTINUE
    (6) statement -> . PASS
    (7) statement -> . expression
    (11) statement -> . conditional
    (12) statement -> . conditional ELSE COLON IND block DED
    (22) statement -> . RETURN expression
    (13) expression -> . expression LPAREN parameters RPAREN
    (14) expression -> . expression LPAREN RPAREN
    (17) expression -> . FUN LPAREN declaration RPAREN COLON IND block DED
    (18) expression -> . FUN LPAREN ID RPAREN COLON IND block DED
    (19) expression -> . FUN LPAREN RPAREN COLON IND block DED
    (23) expression -> . ID ASSIGN expression
    (24) expression -> . ID PLUSASSIGN expression
    (25) expression -> . ID PLUSONE
    (26) expression -> . ID MINUSASSIGN expression
    (27) expression -> . ID MINUSONE
    (28) expression -> . DEL ID
    (29) expression -> . ID
    (30) expression -> . MIN expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MIN expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression POW expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression IF expression
    (41) expression -> . expression IN expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression GTE expression
    (48) expression -> . expression IF expression ELSE expression
    (49) expression -> . NUMBER
    (50) expression -> . BOOLEAN
    (51) expression -> . STRING
    (52) expression -> . NONE
    (53) expression -> . LPAREN expression RPAREN
    (8) conditional -> . IF expression COLON IND block DED
    (9) conditional -> . conditional ELIF expression COLON IND block DED
    (10) conditional -> . conditional NL

    WHILE           shift and go to state 3
    CONTINUE        shift and go to state 5
    PASS            shift and go to state 6
    RETURN          shift and go to state 8
    FUN             shift and go to state 10
    ID              shift and go to state 11
    DEL             shift and go to state 12
    MIN             shift and go to state 13
    NOT             shift and go to state 14
    NUMBER          shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    NONE            shift and go to state 19
    LPAREN          shift and go to state 9
    IF              shift and go to state 15

    block                          shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 4
    conditional                    shift and go to state 7

state 1

    (0) S' -> block .
    (2) block -> block . NL
    (3) block -> block . NL statement

    NL              shift and go to state 20


state 2

    (1) block -> statement .

    NL              reduce using rule 1 (block -> statement .)
    $end            reduce using rule 1 (block -> statement .)
    DED             reduce using rule 1 (block -> statement .)


state 3

    (4) statement -> WHILE . expression COLON IND block DED
    (13) expression -> . expression LPAREN parameters RPAREN
    (14) expression -> . expression LPAREN RPAREN
    (17) expression -> . FUN LPAREN declaration RPAREN COLON IND block DED
    (18) expression -> . FUN LPAREN ID RPAREN COLON IND block DED
    (19) expression -> . FUN LPAREN RPAREN COLON IND block DED
    (23) expression -> . ID ASSIGN expression
    (24) expression -> . ID PLUSASSIGN expression
    (25) expression -> . ID PLUSONE
    (26) expression -> . ID MINUSASSIGN expression
    (27) expression -> . ID MINUSONE
    (28) expression -> . DEL ID
    (29) expression -> . ID
    (30) expression -> . MIN expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MIN expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression POW expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression IF expression
    (41) expression -> . expression IN expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression GTE expression
    (48) expression -> . expression IF expression ELSE expression
    (49) expression -> . NUMBER
    (50) expression -> . BOOLEAN
    (51) expression -> . STRING
    (52) expression -> . NONE
    (53) expression -> . LPAREN expression RPAREN

    FUN             shift and go to state 10
    ID              shift and go to state 11
    DEL             shift and go to state 12
    MIN             shift and go to state 13
    NOT             shift and go to state 14
    NUMBER          shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    NONE            shift and go to state 19
    LPAREN          shift and go to state 9

    expression                     shift and go to state 21

state 4

    (7) statement -> expression .
    (13) expression -> expression . LPAREN parameters RPAREN
    (14) expression -> expression . LPAREN RPAREN
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MIN expression
    (34) expression -> expression . TIMES expression
    (35) expression -> expression . DIV expression
    (36) expression -> expression . MOD expression
    (37) expression -> expression . POW expression
    (38) expression -> expression . AND expression
    (39) expression -> expression . OR expression
    (40) expression -> expression . IF expression
    (41) expression -> expression . IN expression
    (42) expression -> expression . EQ expression
    (43) expression -> expression . NEQ expression
    (44) expression -> expression . LT expression
    (45) expression -> expression . LTE expression
    (46) expression -> expression . GT expression
    (47) expression -> expression . GTE expression
    (48) expression -> expression . IF expression ELSE expression

    NL              reduce using rule 7 (statement -> expression .)
    $end            reduce using rule 7 (statement -> expression .)
    DED             reduce using rule 7 (statement -> expression .)
    LPAREN          shift and go to state 22
    PLUS            shift and go to state 23
    MIN             shift and go to state 24
    TIMES           shift and go to state 25
    DIV             shift and go to state 26
    MOD             shift and go to state 27
    POW             shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    IF              shift and go to state 31
    IN              shift and go to state 32
    EQ              shift and go to state 33
    NEQ             shift and go to state 34
    LT              shift and go to state 35
    LTE             shift and go to state 36
    GT              shift and go to state 37
    GTE             shift and go to state 38


state 5

    (5) statement -> CONTINUE .

    NL              reduce using rule 5 (statement -> CONTINUE .)
    $end            reduce using rule 5 (statement -> CONTINUE .)
    DED             reduce using rule 5 (statement -> CONTINUE .)


state 6

    (6) statement -> PASS .

    NL              reduce using rule 6 (statement -> PASS .)
    $end            reduce using rule 6 (statement -> PASS .)
    DED             reduce using rule 6 (statement -> PASS .)


state 7

    (11) statement -> conditional .
    (12) statement -> conditional . ELSE COLON IND block DED
    (9) conditional -> conditional . ELIF expression COLON IND block DED
    (10) conditional -> conditional . NL

  ! shift/reduce conflict for NL resolved as shift
    $end            reduce using rule 11 (statement -> conditional .)
    DED             reduce using rule 11 (statement -> conditional .)
    ELSE            shift and go to state 39
    ELIF            shift and go to state 40
    NL              shift and go to state 41

  ! NL              [ reduce using rule 11 (statement -> conditional .) ]


state 8

    (22) statement -> RETURN . expression
    (13) expression -> . expression LPAREN parameters RPAREN
    (14) expression -> . expression LPAREN RPAREN
    (17) expression -> . FUN LPAREN declaration RPAREN COLON IND block DED
    (18) expression -> . FUN LPAREN ID RPAREN COLON IND block DED
    (19) expression -> . FUN LPAREN RPAREN COLON IND block DED
    (23) expression -> . ID ASSIGN expression
    (24) expression -> . ID PLUSASSIGN expression
    (25) expression -> . ID PLUSONE
    (26) expression -> . ID MINUSASSIGN expression
    (27) expression -> . ID MINUSONE
    (28) expression -> . DEL ID
    (29) expression -> . ID
    (30) expression -> . MIN expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MIN expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression POW expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression IF expression
    (41) expression -> . expression IN expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression GTE expression
    (48) expression -> . expression IF expression ELSE expression
    (49) expression -> . NUMBER
    (50) expression -> . BOOLEAN
    (51) expression -> . STRING
    (52) expression -> . NONE
    (53) expression -> . LPAREN expression RPAREN

    FUN             shift and go to state 10
    ID              shift and go to state 11
    DEL             shift and go to state 12
    MIN             shift and go to state 13
    NOT             shift and go to state 14
    NUMBER          shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    NONE            shift and go to state 19
    LPAREN          shift and go to state 9

    expression                     shift and go to state 42

state 9

    (53) expression -> LPAREN . expression RPAREN
    (13) expression -> . expression LPAREN parameters RPAREN
    (14) expression -> . expression LPAREN RPAREN
    (17) expression -> . FUN LPAREN declaration RPAREN COLON IND block DED
    (18) expression -> . FUN LPAREN ID RPAREN COLON IND block DED
    (19) expression -> . FUN LPAREN RPAREN COLON IND block DED
    (23) expression -> . ID ASSIGN expression
    (24) expression -> . ID PLUSASSIGN expression
    (25) expression -> . ID PLUSONE
    (26) expression -> . ID MINUSASSIGN expression
    (27) expression -> . ID MINUSONE
    (28) expression -> . DEL ID
    (29) expression -> . ID
    (30) expression -> . MIN expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MIN expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression POW expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression IF expression
    (41) expression -> . expression IN expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression GTE expression
    (48) expression -> . expression IF expression ELSE expression
    (49) expression -> . NUMBER
    (50) expression -> . BOOLEAN
    (51) expression -> . STRING
    (52) expression -> . NONE
    (53) expression -> . LPAREN expression RPAREN

    FUN             shift and go to state 10
    ID              shift and go to state 11
    DEL             shift and go to state 12
    MIN             shift and go to state 13
    NOT             shift and go to state 14
    NUMBER          shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    NONE            shift and go to state 19
    LPAREN          shift and go to state 9

    expression                     shift and go to state 43

state 10

    (17) expression -> FUN . LPAREN declaration RPAREN COLON IND block DED
    (18) expression -> FUN . LPAREN ID RPAREN COLON IND block DED
    (19) expression -> FUN . LPAREN RPAREN COLON IND block DED

    LPAREN          shift and go to state 44


state 11

    (23) expression -> ID . ASSIGN expression
    (24) expression -> ID . PLUSASSIGN expression
    (25) expression -> ID . PLUSONE
    (26) expression -> ID . MINUSASSIGN expression
    (27) expression -> ID . MINUSONE
    (29) expression -> ID .

    ASSIGN          shift and go to state 45
    PLUSASSIGN      shift and go to state 46
    PLUSONE         shift and go to state 47
    MINUSASSIGN     shift and go to state 48
    MINUSONE        shift and go to state 49
    LPAREN          reduce using rule 29 (expression -> ID .)
    PLUS            reduce using rule 29 (expression -> ID .)
    MIN             reduce using rule 29 (expression -> ID .)
    TIMES           reduce using rule 29 (expression -> ID .)
    DIV             reduce using rule 29 (expression -> ID .)
    MOD             reduce using rule 29 (expression -> ID .)
    POW             reduce using rule 29 (expression -> ID .)
    AND             reduce using rule 29 (expression -> ID .)
    OR              reduce using rule 29 (expression -> ID .)
    IF              reduce using rule 29 (expression -> ID .)
    IN              reduce using rule 29 (expression -> ID .)
    EQ              reduce using rule 29 (expression -> ID .)
    NEQ             reduce using rule 29 (expression -> ID .)
    LT              reduce using rule 29 (expression -> ID .)
    LTE             reduce using rule 29 (expression -> ID .)
    GT              reduce using rule 29 (expression -> ID .)
    GTE             reduce using rule 29 (expression -> ID .)
    NL              reduce using rule 29 (expression -> ID .)
    $end            reduce using rule 29 (expression -> ID .)
    COLON           reduce using rule 29 (expression -> ID .)
    DED             reduce using rule 29 (expression -> ID .)
    RPAREN          reduce using rule 29 (expression -> ID .)
    COMMA           reduce using rule 29 (expression -> ID .)
    ELSE            reduce using rule 29 (expression -> ID .)


state 12

    (28) expression -> DEL . ID

    ID              shift and go to state 50


state 13

    (30) expression -> MIN . expression
    (13) expression -> . expression LPAREN parameters RPAREN
    (14) expression -> . expression LPAREN RPAREN
    (17) expression -> . FUN LPAREN declaration RPAREN COLON IND block DED
    (18) expression -> . FUN LPAREN ID RPAREN COLON IND block DED
    (19) expression -> . FUN LPAREN RPAREN COLON IND block DED
    (23) expression -> . ID ASSIGN expression
    (24) expression -> . ID PLUSASSIGN expression
    (25) expression -> . ID PLUSONE
    (26) expression -> . ID MINUSASSIGN expression
    (27) expression -> . ID MINUSONE
    (28) expression -> . DEL ID
    (29) expression -> . ID
    (30) expression -> . MIN expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MIN expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression POW expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression IF expression
    (41) expression -> . expression IN expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression GTE expression
    (48) expression -> . expression IF expression ELSE expression
    (49) expression -> . NUMBER
    (50) expression -> . BOOLEAN
    (51) expression -> . STRING
    (52) expression -> . NONE
    (53) expression -> . LPAREN expression RPAREN

    FUN             shift and go to state 10
    ID              shift and go to state 11
    DEL             shift and go to state 12
    MIN             shift and go to state 13
    NOT             shift and go to state 14
    NUMBER          shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    NONE            shift and go to state 19
    LPAREN          shift and go to state 9

    expression                     shift and go to state 51

state 14

    (31) expression -> NOT . expression
    (13) expression -> . expression LPAREN parameters RPAREN
    (14) expression -> . expression LPAREN RPAREN
    (17) expression -> . FUN LPAREN declaration RPAREN COLON IND block DED
    (18) expression -> . FUN LPAREN ID RPAREN COLON IND block DED
    (19) expression -> . FUN LPAREN RPAREN COLON IND block DED
    (23) expression -> . ID ASSIGN expression
    (24) expression -> . ID PLUSASSIGN expression
    (25) expression -> . ID PLUSONE
    (26) expression -> . ID MINUSASSIGN expression
    (27) expression -> . ID MINUSONE
    (28) expression -> . DEL ID
    (29) expression -> . ID
    (30) expression -> . MIN expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MIN expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression POW expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression IF expression
    (41) expression -> . expression IN expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression GTE expression
    (48) expression -> . expression IF expression ELSE expression
    (49) expression -> . NUMBER
    (50) expression -> . BOOLEAN
    (51) expression -> . STRING
    (52) expression -> . NONE
    (53) expression -> . LPAREN expression RPAREN

    FUN             shift and go to state 10
    ID              shift and go to state 11
    DEL             shift and go to state 12
    MIN             shift and go to state 13
    NOT             shift and go to state 14
    NUMBER          shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    NONE            shift and go to state 19
    LPAREN          shift and go to state 9

    expression                     shift and go to state 52

state 15

    (8) conditional -> IF . expression COLON IND block DED
    (13) expression -> . expression LPAREN parameters RPAREN
    (14) expression -> . expression LPAREN RPAREN
    (17) expression -> . FUN LPAREN declaration RPAREN COLON IND block DED
    (18) expression -> . FUN LPAREN ID RPAREN COLON IND block DED
    (19) expression -> . FUN LPAREN RPAREN COLON IND block DED
    (23) expression -> . ID ASSIGN expression
    (24) expression -> . ID PLUSASSIGN expression
    (25) expression -> . ID PLUSONE
    (26) expression -> . ID MINUSASSIGN expression
    (27) expression -> . ID MINUSONE
    (28) expression -> . DEL ID
    (29) expression -> . ID
    (30) expression -> . MIN expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MIN expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression POW expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression IF expression
    (41) expression -> . expression IN expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression GTE expression
    (48) expression -> . expression IF expression ELSE expression
    (49) expression -> . NUMBER
    (50) expression -> . BOOLEAN
    (51) expression -> . STRING
    (52) expression -> . NONE
    (53) expression -> . LPAREN expression RPAREN

    FUN             shift and go to state 10
    ID              shift and go to state 11
    DEL             shift and go to state 12
    MIN             shift and go to state 13
    NOT             shift and go to state 14
    NUMBER          shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    NONE            shift and go to state 19
    LPAREN          shift and go to state 9

    expression                     shift and go to state 53

state 16

    (49) expression -> NUMBER .

    LPAREN          reduce using rule 49 (expression -> NUMBER .)
    PLUS            reduce using rule 49 (expression -> NUMBER .)
    MIN             reduce using rule 49 (expression -> NUMBER .)
    TIMES           reduce using rule 49 (expression -> NUMBER .)
    DIV             reduce using rule 49 (expression -> NUMBER .)
    MOD             reduce using rule 49 (expression -> NUMBER .)
    POW             reduce using rule 49 (expression -> NUMBER .)
    AND             reduce using rule 49 (expression -> NUMBER .)
    OR              reduce using rule 49 (expression -> NUMBER .)
    IF              reduce using rule 49 (expression -> NUMBER .)
    IN              reduce using rule 49 (expression -> NUMBER .)
    EQ              reduce using rule 49 (expression -> NUMBER .)
    NEQ             reduce using rule 49 (expression -> NUMBER .)
    LT              reduce using rule 49 (expression -> NUMBER .)
    LTE             reduce using rule 49 (expression -> NUMBER .)
    GT              reduce using rule 49 (expression -> NUMBER .)
    GTE             reduce using rule 49 (expression -> NUMBER .)
    NL              reduce using rule 49 (expression -> NUMBER .)
    $end            reduce using rule 49 (expression -> NUMBER .)
    COLON           reduce using rule 49 (expression -> NUMBER .)
    DED             reduce using rule 49 (expression -> NUMBER .)
    RPAREN          reduce using rule 49 (expression -> NUMBER .)
    COMMA           reduce using rule 49 (expression -> NUMBER .)
    ELSE            reduce using rule 49 (expression -> NUMBER .)


state 17

    (50) expression -> BOOLEAN .

    LPAREN          reduce using rule 50 (expression -> BOOLEAN .)
    PLUS            reduce using rule 50 (expression -> BOOLEAN .)
    MIN             reduce using rule 50 (expression -> BOOLEAN .)
    TIMES           reduce using rule 50 (expression -> BOOLEAN .)
    DIV             reduce using rule 50 (expression -> BOOLEAN .)
    MOD             reduce using rule 50 (expression -> BOOLEAN .)
    POW             reduce using rule 50 (expression -> BOOLEAN .)
    AND             reduce using rule 50 (expression -> BOOLEAN .)
    OR              reduce using rule 50 (expression -> BOOLEAN .)
    IF              reduce using rule 50 (expression -> BOOLEAN .)
    IN              reduce using rule 50 (expression -> BOOLEAN .)
    EQ              reduce using rule 50 (expression -> BOOLEAN .)
    NEQ             reduce using rule 50 (expression -> BOOLEAN .)
    LT              reduce using rule 50 (expression -> BOOLEAN .)
    LTE             reduce using rule 50 (expression -> BOOLEAN .)
    GT              reduce using rule 50 (expression -> BOOLEAN .)
    GTE             reduce using rule 50 (expression -> BOOLEAN .)
    NL              reduce using rule 50 (expression -> BOOLEAN .)
    $end            reduce using rule 50 (expression -> BOOLEAN .)
    COLON           reduce using rule 50 (expression -> BOOLEAN .)
    DED             reduce using rule 50 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 50 (expression -> BOOLEAN .)
    COMMA           reduce using rule 50 (expression -> BOOLEAN .)
    ELSE            reduce using rule 50 (expression -> BOOLEAN .)


state 18

    (51) expression -> STRING .

    LPAREN          reduce using rule 51 (expression -> STRING .)
    PLUS            reduce using rule 51 (expression -> STRING .)
    MIN             reduce using rule 51 (expression -> STRING .)
    TIMES           reduce using rule 51 (expression -> STRING .)
    DIV             reduce using rule 51 (expression -> STRING .)
    MOD             reduce using rule 51 (expression -> STRING .)
    POW             reduce using rule 51 (expression -> STRING .)
    AND             reduce using rule 51 (expression -> STRING .)
    OR              reduce using rule 51 (expression -> STRING .)
    IF              reduce using rule 51 (expression -> STRING .)
    IN              reduce using rule 51 (expression -> STRING .)
    EQ              reduce using rule 51 (expression -> STRING .)
    NEQ             reduce using rule 51 (expression -> STRING .)
    LT              reduce using rule 51 (expression -> STRING .)
    LTE             reduce using rule 51 (expression -> STRING .)
    GT              reduce using rule 51 (expression -> STRING .)
    GTE             reduce using rule 51 (expression -> STRING .)
    NL              reduce using rule 51 (expression -> STRING .)
    $end            reduce using rule 51 (expression -> STRING .)
    COLON           reduce using rule 51 (expression -> STRING .)
    DED             reduce using rule 51 (expression -> STRING .)
    RPAREN          reduce using rule 51 (expression -> STRING .)
    COMMA           reduce using rule 51 (expression -> STRING .)
    ELSE            reduce using rule 51 (expression -> STRING .)


state 19

    (52) expression -> NONE .

    LPAREN          reduce using rule 52 (expression -> NONE .)
    PLUS            reduce using rule 52 (expression -> NONE .)
    MIN             reduce using rule 52 (expression -> NONE .)
    TIMES           reduce using rule 52 (expression -> NONE .)
    DIV             reduce using rule 52 (expression -> NONE .)
    MOD             reduce using rule 52 (expression -> NONE .)
    POW             reduce using rule 52 (expression -> NONE .)
    AND             reduce using rule 52 (expression -> NONE .)
    OR              reduce using rule 52 (expression -> NONE .)
    IF              reduce using rule 52 (expression -> NONE .)
    IN              reduce using rule 52 (expression -> NONE .)
    EQ              reduce using rule 52 (expression -> NONE .)
    NEQ             reduce using rule 52 (expression -> NONE .)
    LT              reduce using rule 52 (expression -> NONE .)
    LTE             reduce using rule 52 (expression -> NONE .)
    GT              reduce using rule 52 (expression -> NONE .)
    GTE             reduce using rule 52 (expression -> NONE .)
    NL              reduce using rule 52 (expression -> NONE .)
    $end            reduce using rule 52 (expression -> NONE .)
    COLON           reduce using rule 52 (expression -> NONE .)
    DED             reduce using rule 52 (expression -> NONE .)
    RPAREN          reduce using rule 52 (expression -> NONE .)
    COMMA           reduce using rule 52 (expression -> NONE .)
    ELSE            reduce using rule 52 (expression -> NONE .)


state 20

    (2) block -> block NL .
    (3) block -> block NL . statement
    (4) statement -> . WHILE expression COLON IND block DED
    (5) statement -> . CONTINUE
    (6) statement -> . PASS
    (7) statement -> . expression
    (11) statement -> . conditional
    (12) statement -> . conditional ELSE COLON IND block DED
    (22) statement -> . RETURN expression
    (13) expression -> . expression LPAREN parameters RPAREN
    (14) expression -> . expression LPAREN RPAREN
    (17) expression -> . FUN LPAREN declaration RPAREN COLON IND block DED
    (18) expression -> . FUN LPAREN ID RPAREN COLON IND block DED
    (19) expression -> . FUN LPAREN RPAREN COLON IND block DED
    (23) expression -> . ID ASSIGN expression
    (24) expression -> . ID PLUSASSIGN expression
    (25) expression -> . ID PLUSONE
    (26) expression -> . ID MINUSASSIGN expression
    (27) expression -> . ID MINUSONE
    (28) expression -> . DEL ID
    (29) expression -> . ID
    (30) expression -> . MIN expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MIN expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression POW expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression IF expression
    (41) expression -> . expression IN expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression GTE expression
    (48) expression -> . expression IF expression ELSE expression
    (49) expression -> . NUMBER
    (50) expression -> . BOOLEAN
    (51) expression -> . STRING
    (52) expression -> . NONE
    (53) expression -> . LPAREN expression RPAREN
    (8) conditional -> . IF expression COLON IND block DED
    (9) conditional -> . conditional ELIF expression COLON IND block DED
    (10) conditional -> . conditional NL

    NL              reduce using rule 2 (block -> block NL .)
    $end            reduce using rule 2 (block -> block NL .)
    DED             reduce using rule 2 (block -> block NL .)
    WHILE           shift and go to state 3
    CONTINUE        shift and go to state 5
    PASS            shift and go to state 6
    RETURN          shift and go to state 8
    FUN             shift and go to state 10
    ID              shift and go to state 11
    DEL             shift and go to state 12
    MIN             shift and go to state 13
    NOT             shift and go to state 14
    NUMBER          shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    NONE            shift and go to state 19
    LPAREN          shift and go to state 9
    IF              shift and go to state 15

    statement                      shift and go to state 54
    expression                     shift and go to state 4
    conditional                    shift and go to state 7

state 21

    (4) statement -> WHILE expression . COLON IND block DED
    (13) expression -> expression . LPAREN parameters RPAREN
    (14) expression -> expression . LPAREN RPAREN
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MIN expression
    (34) expression -> expression . TIMES expression
    (35) expression -> expression . DIV expression
    (36) expression -> expression . MOD expression
    (37) expression -> expression . POW expression
    (38) expression -> expression . AND expression
    (39) expression -> expression . OR expression
    (40) expression -> expression . IF expression
    (41) expression -> expression . IN expression
    (42) expression -> expression . EQ expression
    (43) expression -> expression . NEQ expression
    (44) expression -> expression . LT expression
    (45) expression -> expression . LTE expression
    (46) expression -> expression . GT expression
    (47) expression -> expression . GTE expression
    (48) expression -> expression . IF expression ELSE expression

    COLON           shift and go to state 55
    LPAREN          shift and go to state 22
    PLUS            shift and go to state 23
    MIN             shift and go to state 24
    TIMES           shift and go to state 25
    DIV             shift and go to state 26
    MOD             shift and go to state 27
    POW             shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    IF              shift and go to state 31
    IN              shift and go to state 32
    EQ              shift and go to state 33
    NEQ             shift and go to state 34
    LT              shift and go to state 35
    LTE             shift and go to state 36
    GT              shift and go to state 37
    GTE             shift and go to state 38


state 22
